--- a/style.css
+++ b/style.css
@@ -84,3 +84,12 @@ p{
 .links:hover{
     background-color: dodgerblue;
 }
+a{
+    text-decoration: none;
+}
+.article:hover{
+    color: aquamarine;
+}
+html{
+    scroll-behavior: smooth;
+}
